<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.GoodsEditFragment"
    android:background="@color/mainBg">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <TextView
                android:text="@string/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/colorPrimary"/>

            <EditText
                android:id="@+id/goodsEditTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                android:inputType="text"
                android:layout_marginBottom="10dp"
                android:background="@drawable/custom_edit_text"/>

            <TextView
                android:text="@string/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textColor="@color/colorPrimary"/>

            <EditText
                android:id="@+id/goodsEditAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/address"
                android:layout_marginBottom="10dp"
                android:background="@drawable/custom_edit_text"/>

            <TextView
                android:text="@string/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textColor="@color/colorPrimary"/>

            <EditText
                android:id="@+id/goodsEditPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="@string/phone"
                android:layout_marginBottom="10dp"
                android:background="@drawable/custom_edit_text"/>

            <TextView
                android:text="@string/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textColor="@color/colorPrimary"/>

            <EditText
                android:id="@+id/goodsEditDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:layout_marginBottom="10dp"
                android:background="@drawable/custom_edit_text"/>



            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/goodsEditImageList"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:scrollbars="horizontal"
                android:layout_marginBottom="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">
                <Button
                    android:id="@+id/goodsEditSubmit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit"
                    android:background="@drawable/custom_button"
                    android:layout_margin="5dp"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/goodsEditAddImage"
                    android:text="@string/addImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_button"
                    android:layout_margin="5dp"
                    android:layout_weight="1"/>
            </LinearLayout>



        </LinearLayout>
        <ProgressBar
            android:id="@+id/loadingGoodsEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:theme="@style/primaryAccent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>